--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div data-aos="fade-up"
              data-aos-duration="3000"
          class="about-img">
-            <img src="20220516_212405.jpg" alt="">
+            <img src="Untitled-1.png" alt="">
             <span class="circle-spin"></span>
         </div>
         <div class="about-content">
