changes in code

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>Welcome to my website!.</p>
 
             <div  data-aos="fade-right" class="btn-box">
-                <a href="https://www.facebook.com/profile.php?id=100095075747260" target="_blank"  class="btn" >Hair ME</a>
+                <a href="https://www.facebook.com/profile.php?id=100095075747260" target="_blank"  class="btn" >Hire ME</a>
                 <a href="https://www.facebook.com/profile.php?id=100095075747260"target="_blank"  class="btn">Let's Talk</a>
             </div>
         </div>
